--- a/.jshintrc
+++ b/.jshintrc
@@ -2,7 +2,7 @@
   "esnext": true,
   "undef": true,
   "unused": true,
-  "predef": ["module"],
+  "predef": ["module", "require"],
   "browser": true,
   "devel": true
 }
