--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "webpack-dev-server": "^1.7.0"
   },
   "dependencies": {
+    "eslint": "^1.1.0",
+    "eslint-plugin-react": "^3.2.3",
     "react": "^0.13.0"
   }
 }
