--- a/.eslintrc
+++ b/.eslintrc
@@ -10,10 +10,13 @@
   },
   "rules": {
     "no-undef": 2,
-    "no-unused-vars": 2,
+    "no-unused-vars": [2, {"argsIgnorePattern": "^_"}],
     "comma-dangle": 0,
     "no-console": 0,
-    "semi": [2, "always"]
+    "semi": [2, "always"],
+    "react/jsx-uses-react": 2,
+    "react/react-in-jsx-scope": 2,
+    "react/jsx-no-undef": 2
   },
   "plugins": [
     "react"
