--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
     "build": "webpack"
   },
   "devDependencies": {
-    "babel-core": "^4.7.4",
-    "babel-loader": "^4.1.0",
+    "babel-core": "^5.4.7",
+    "babel-loader": "^5.1.2",
+    "babel-plugin-react-transform": "^1.0.1",
     "eslint": "^1.1.0",
     "eslint-plugin-react": "^3.2.3",
+    "express": "^4.13.3",
     "react-hot-loader": "^1.2.2",
-    "webpack": "^1.7.2",
-    "webpack-dev-server": "^1.7.0"
+    "react-transform-catch-errors": "^1.0.0",
+    "react-transform-hmr": "^1.0.0",
+    "redbox-react": "^1.0.1",
+    "webpack": "^1.9.6",
+    "webpack-dev-middleware": "^1.2.0",
+    "webpack-hot-middleware": "^2.0.0"
   },
   "dependencies": {
     "react": "^0.13.0"
