--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "babel-core": "^5.4.7",
     "babel-loader": "^5.1.2",
+    "babel-plugin-react-display-name": "^2.0.0",
     "babel-plugin-react-transform": "^1.0.1",
     "eslint": "^1.1.0",
     "eslint-plugin-react": "^3.2.3",
