--- a/package.json
+++ b/package.json
@@ -1,25 +1,30 @@
 {
   "scripts": {
     "start": "node server.js",
-    "build": "webpack"
+    "build": "rm -rf build; cp -r static build; webpack"
   },
   "devDependencies": {
     "babel-core": "^5.4.7",
     "babel-loader": "^5.1.2",
     "babel-plugin-react-display-name": "^2.0.0",
     "babel-plugin-react-transform": "^1.0.1",
+    "css-loader": "^0.19.0",
     "eslint": "^1.1.0",
     "eslint-plugin-react": "^3.2.3",
     "express": "^4.13.3",
+    "file-loader": "^0.8.4",
     "react-hot-loader": "^1.2.2",
     "react-transform-catch-errors": "^1.0.0",
     "react-transform-hmr": "^1.0.0",
     "redbox-react": "^1.0.1",
+    "style-loader": "^0.12.4",
+    "url-loader": "^0.5.6",
     "webpack": "^1.9.6",
     "webpack-dev-middleware": "^1.2.0",
     "webpack-hot-middleware": "^2.0.0"
   },
   "dependencies": {
+    "bootstrap": "^3.3.5",
     "react": "^0.13.0"
   }
 }
