--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.5",
-    "react": "^0.13.0"
+    "d3": "^3.5.6",
+    "react": "^0.14.0-rc1",
+    "react-dom": "^0.14.0-rc1",
+    "underscore": "^1.8.3"
   }
 }
