--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "start": "node server.js",
-    "build": "rm -rf build; cp -r static build; webpack"
+    "build": "rm -rf build; cp -r static build; NODE_ENV=production webpack"
   },
   "devDependencies": {
     "babel-core": "^5.4.7",
