--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   },
   "devDependencies": {
     "babel-core": "^5.4.7",
+    "babel-eslint": "^4.1.3",
     "babel-loader": "^5.1.2",
     "babel-plugin-react-display-name": "^2.0.0",
     "babel-plugin-react-transform": "^1.0.1",
